# pytrading

./: .env  .env.example  .gitignore  .mcp.json  AGENT.md  CLAUDE.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  TASK.md  UI_README.md  page_full.yml  pyproject.toml  requirements.txt  run.py  start.bat  start.py  start.sh  start_ui.py  test_mysql_only.py  test_strategy_api.py  测试报告.md
.ccw/.spec-index/: personal.index.json  specs.index.json
.ccw/specs/: architecture-constraints.md  coding-conventions.md  debug-notes.md  quality-rules.md  review-standards.md  test-conventions.md  validation-rules.md
.claude/: CLAUDE.md  settings.json  settings.local.json  version.json
.claude/agents/: action-planning-agent.md  cli-execution-agent.md  cli-explore-agent.md  cli-lite-planning-agent.md  cli-planning-agent.md  code-developer.md  conceptual-planning-agent.md  context-search-agent.md  debug-explore-agent.md  issue-plan-agent.md  tdd-developer.md  team-supervisor.md  team-worker.md  test-action-planning-agent.md  test-context-search-agent.md  test-fix-agent.md  ui-design-agent.md  workflow-analyzer.md  workflow-collab-planner.md  (+11 more)
.codex/: AGENTS.md  config.toml  hooks.json
.workflow/: project-tech.json  project.md  spec-analytics.jsonl  state.json
docs/: README.md  建议目录结构.md  文档结构总结.md  目录结构实施指南.md  软件设计文档.md
frontend/: package-lock.json  package.json  tsconfig.json
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: setup-directory-structure.sh
sql/: add_strategy_name_column.sql  backtest_management_schema.sql  create_backtest_table.sql  migrate_symbols_add_industry_fields.sql  migrate_watchlist_drop_metrics.sql  watchlist_schema.sql
test/: demo.py  jk.py  main.py  realtime.py  strategy.py  talib_test.py  test.py  test_mysql.py  trend.py
tests/: conftest.py
xTrading/: FRONTEND_README.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  index.html  package-lock.json  package.json  start_dev.sh  tailwind.config.ts  vite.config.ts
(+616 files in other folders)
