[project]
name = "pytrading"
version = "0.1.0"
description = "现代化量化交易系统 - 基于Python和React的Web界面"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "gm>=3.0.177",
    "psutil>=7.0.0",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.41",
    "ta-lib",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "akshare>=1.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/pytrading"]
omit = [
    "src/pytrading/run/*",
    "src/pytrading/py_trading.py",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]

[tool.uv.sources]
#ta-lib = { path = "bin/ta_lib-0.6.4-cp311-cp311-win_amd64.whl" }
